fix OpenApi documentation, add specific handler for json, fix array post body for filter
